--- a/src/signUp/styles/FormInput.sass
+++ b/src/signUp/styles/FormInput.sass
@@ -1,19 +1,54 @@
 .form-group
-  background: aqua
-  width: 300px
-  height: 50px
+
+  background-clip: text
+  color: transparent
+  width: 70vw
+  height: 6vh
   justify-content: center
   align-items: center
-  border-radius: 10px
+  border-radius: 40px
+  border: 2px solid #f1eded
+  padding-right: 30px
+  font-weight: bold
+
+
 input
   width: 100%
   height: 100%
   border: none
-  border-radius: 10px
+  border-radius: 40px
+  -webkit-background-clip: text
+  -webkit-text-fill-color: transparent
+  background-clip: text
+  color: transparent
+  padding-left: 30px
+  outline: none
+  margin-top: 2px
+  font-size: 20px
+  font-family: 'Roboto', sans-serif
+  font-weight: 100
 
-.error
-    color: red
-    padding-top: 10px
+
+
+  &::placeholder
+    justify-content: center
+    align-items: center
+    color: white
+    font-weight: bold
+    font-size: 20px
     font-family: 'Roboto', sans-serif
     font-weight: 100
 
+
+
+
+.error
+  -webkit-background-clip: text
+  webkit-text-fill-color: #482222
+  color: #94122b
+  font-family: 'Roboto', sans-serif
+  font-weight: 100
+  font-size: 14px
+  margin-left: 20px
+  position: relative
+  top: 10px
