--- a/src/signUp/styles/PasswordInput.sass
+++ b/src/signUp/styles/PasswordInput.sass
@@ -4,27 +4,37 @@
   position: relative
   display: flex
   align-items: center
-  margin-bottom: 10px
+
+
 
   input
-    width: 50%
+  width: 100%
+  height: 100%
+  border: none
+  border-radius: 40px
+  -webkit-background-clip: text
+  -webkit-text-fill-color: transparent
+  background-clip: text
+  color: transparent
+
+  border: none
+  padding-right: 30px
+
+  outline: none
   // Espace pour l'icône
 
   .password-toggle-button
-    // Se met au meme endroit que la fin de l'input
-    position: absolute
-    right: 50%
-
-    // Si pas y a des contours chelous
-    background: none
-    border: none
-    cursor: pointer
-
-    // Juste pour centrer proprement l'icône
     display: flex
     align-items: center
     justify-content: center
-    padding: 5px 0 5px 5px
+    -webkit-background-clip: text
+    -webkit-text-fill-color: transparent
+    background-clip: text
+    fill: white
+    color: white
+    border: none
+    outline: none
+
 
     &:focus
       outline: none
