--- a/src/signUp/styles/PasswordInput.css
+++ b/src/signUp/styles/PasswordInput.css
@@ -3,21 +3,29 @@
   position: relative;
   display: flex;
   align-items: center;
-  margin-bottom: 10px;
-}
-.password-input input {
-  width: 50%;
+  width: 100%;
+  height: 100%;
+  border: none;
+  border-radius: 40px;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  color: transparent;
+  border: none;
+  padding-right: 30px;
+  outline: none;
 }
 .password-input .password-toggle-button {
-  position: absolute;
-  right: 50%;
-  background: none;
-  border: none;
-  cursor: pointer;
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 5px 0 5px 5px;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  fill: white;
+  color: white;
+  border: none;
+  outline: none;
 }
 .password-input .password-toggle-button:focus {
   outline: none;
