--- a/src/signUp/styles/FormInput.sass
+++ b/src/signUp/styles/FormInput.sass
@@ -1,5 +1,5 @@
 .form-group
-
+  display: flex
   background-clip: text
   color: transparent
   width: 70vw
@@ -29,7 +29,6 @@ input
   font-weight: 100
 
 
-
   &::placeholder
     justify-content: center
     align-items: center
@@ -38,8 +37,6 @@ input
     font-size: 20px
     font-family: 'Roboto', sans-serif
     font-weight: 100
-
-
 
 
 .error
