--- a/src/signUp/styles/FormInput.sass
+++ b/src/signUp/styles/FormInput.sass
@@ -49,3 +49,14 @@ input
   margin-left: 20px
   position: relative
   top: 10px
+
+// sans le important jcrois que la bibliothèque passe au dessus de notre class
+.tooltip
+  background-color: #000000 !important
+  color: #fff !important
+  font-size: 14px !important
+  padding: 8px !important
+  border-radius: 4px !important
+  text-align: center !important
+
+
