--- a/src/signUp/styles/FormInput.sass
+++ b/src/signUp/styles/FormInput.sass
@@ -52,11 +52,11 @@ input
 
 // sans le important jcrois que la bibliothèque passe au dessus de notre class
 .tooltip
-  background-color: #000000 !important
-  color: #fff !important
-  font-size: 14px !important
+  background-color: rgb(140, 14, 66) !important // Ajustez l'alpha (0.8) pour la transparence
+  color: #eee8e8 !important
+  font-size: 20px !important
+  font-weight: 30 !important
   padding: 8px !important
-  border-radius: 4px !important
+  border-radius: 20px !important
   text-align: center !important
-
 
