--- a/src/connection/signUp/styles/SignUpForm.sass
+++ b/src/connection/signUp/styles/SignUpForm.sass
@@ -1,13 +1,5 @@
 .registration-form
-  background: linear-gradient(to right, #893f3f, #e96060, #cc6f6f), linear-gradient(to bottom, #8b3aa9, #815353, #822828)
-  background-blend-mode: multiply
 
-  height: 100%
-  width: 100%
-  display: flex
-  flex-direction: column
-  justify-content: space-between
-  align-items: center
   .test
     background: #f8d6c7
     background-clip: text
@@ -33,7 +25,7 @@
     margin-top: 10px
 
 
-.inscription
+.submitBtn
 
   background: white
   width: 280px
@@ -64,11 +56,7 @@
     padding-left: 20px
     font-family: 'Roboto', sans-serif
     font-weight: 400
-.title-container
-  padding-top: 20px
-  align-items: center
-  text-align: center
-  justify-content: center
+
 
 .svgg
   position: relative
