--- a/src/connection/signUp/styles/SignUpForm.sass
+++ b/src/connection/signUp/styles/SignUpForm.sass
@@ -1,66 +1,21 @@
-.registration-form
 
-  .test
-    background: #f8d6c7
-    background-clip: text
-    color: transparent
-    border: none
-    font-family: 'Roboto', sans-serif
-    font-weight: 100
-    font-size: 20px
-    cursor: pointer
-    margin-right: 30px
-    &:hover
-      background: #f8d6c7
-    &:focus
-      outline: none
-    &:active
-      background: #f8d6c7
-
-  h2
-    font-family: 'Roboto', sans-serif
-    font-weight: 100
-    font-size: 40px
-    color: #ffffff
-    margin-top: 10px
-
-
+.signUpForm
+    display: flex
+    flex-direction: column
+    align-items: center
+    justify-content: space-between
+    width: 50%
+    height: 100%
 .submitBtn
-
-  background: white
-  width: 280px
-  height: 60px
-  border-radius: 40px
-  text-align: center
-  font-family: 'Open Sans', sans-serif
-  font-weight: 600
-  font-size: 28px
-  border: none
-  outline: none
-  color: #1d113d
-.signintxt
-  color: white
-  font-size: 20px
-  padding-left: 10px
-  font-family: 'Roboto', sans-serif
-  font-weight: 400
-  text-decoration: underline
-
-.signin
-  margin-bottom: 20px
-  display: flex
-.signintxt1
-    color: white
-    font-size: 20px
-    margin-bottom: 50px
-    padding-left: 20px
-    font-family: 'Roboto', sans-serif
-    font-weight: 400
-
-
-.svgg
-  position: relative
-  right: 100px
-  padding-top: 20px
-  fill: white
-  color: white
+   background: #ffffff
+   width: 60vw
+   height: 7vh
+   border-radius: 40px
+   text-align: center
+   font-family: 'Open Sans', sans-serif
+   font-weight: 600
+   font-size: 3vh
+   border: none
+   outline: none
+   color: #1d113d
+   margin-top: 10px
