--- a/src/connection/signUp/styles/SignUpGlobalStyle.sass
+++ b/src/connection/signUp/styles/SignUpGlobalStyle.sass
@@ -1,5 +1,5 @@
 .signUpGlobalStyle
-    background: linear-gradient(to right, #893f3f, #e96060, #cc6f6f), linear-gradient(to bottom, #8b3aa9, #815353, #822828)
+    background:  linear-gradient(to right, #7b2c2c, #9d2436, #770505), linear-gradient(to bottom, #521e66, #815353, #a533a9)
     background-blend-mode: multiply
     height: 100%
     width: 100%
