--- a/src/connection/signUp/styles/FormInput.sass
+++ b/src/connection/signUp/styles/FormInput.sass
@@ -4,7 +4,6 @@
   color: transparent
   width: 70vw
   height: 6vh
-  justify-content: center
   align-items: center
   border-radius: 40px
   border: 2px solid #f1eded
@@ -12,7 +11,7 @@
   font-weight: bold
 
 
-input
+.input
   width: 100%
   height: 100%
   border: none
@@ -21,34 +20,13 @@ input
   -webkit-text-fill-color: transparent
   background-clip: text
   color: transparent
-  padding-left: 30px
   outline: none
   margin-top: 2px
   font-size: 20px
   font-family: 'Roboto', sans-serif
   font-weight: 100
-
-
-  &::placeholder
-    justify-content: center
-    align-items: center
-    color: white
-    font-weight: bold
-    font-size: 20px
-    font-family: 'Roboto', sans-serif
-    font-weight: 100
-
-
-.error
-  -webkit-background-clip: text
-  webkit-text-fill-color: #482222
-  color: #94122b
-  font-family: 'Roboto', sans-serif
-  font-weight: 100
-  font-size: 14px
-  margin-left: 20px
-  position: relative
-  top: 10px
+  margin-left: 10px
+  caret-color: #ffffff
 
 // sans le important jcrois que la bibliothèque passe au dessus de notre class
 .tooltip
