--- a/src/connection/signUp/styles/HeaderStyle.sass
+++ b/src/connection/signUp/styles/HeaderStyle.sass
@@ -1,11 +1,11 @@
 .headerContainer
-  padding-top: 20px
   align-items: center
   text-align: center
   justify-content: center
+  padding: 40px
 h2
     font-family: 'Roboto', sans-serif
     font-weight: 100
     font-size: 40px
     color: #ffffff
-    margin-top: 10px
+
