--- a/src/connection/signUp/styles/PasswordInput.sass
+++ b/src/connection/signUp/styles/PasswordInput.sass
@@ -1,25 +1,19 @@
 /* src/components/PasswordInput.sass */
 
-.password-input
-  position: relative
+.inputPasswordContainer
   display: flex
-  align-items: center
-  width: 100%
-  height: 100%
-  border: none
-  border-radius: 40px
-  -webkit-background-clip: text
-  -webkit-text-fill-color: transparent
   background-clip: text
   color: transparent
+  width: 70vw
+  height: 6vh
+  justify-content: center
+  align-items: center
+  border-radius: 40px
+  border: 2px solid #f1eded
+  padding-right: 30px
+  font-weight: bold
 
-  border: none
-  padding-right: 10px
-
-  outline: none
-  // Espace pour l'icône
-
-  .password-toggle-button
+  .passwordToggleBtn
     display: flex
     align-items: center
     justify-content: center
@@ -31,10 +25,43 @@
     border: none
     outline: none
 
+.inputPassword
+  width: 100%
+  height: 100%
+  border: none
+  border-radius: 40px
+  -webkit-background-clip: text
+  -webkit-text-fill-color: transparent
+  background-clip: text
+  color: transparent
+  padding-left: 10px
 
-    &:focus
-      outline: none
+  outline: none
+  margin-top: 2px
+  font-size: 20px
+  font-family: 'Roboto', sans-serif
+  font-weight: 100
+  caret-color: #ffffff
 
-    svg
-      width: 16px
-      height: 16px
+.error
+  -webkit-background-clip: text
+  webkit-text-fill-color: #482222
+  color: #94122b
+  font-family: 'Roboto', sans-serif
+  font-weight: 100
+  font-size: 14px
+  margin-left: 20px
+  position: relative
+  top: 10px
+
+// sans le important jcrois que la bibliothèque passe au dessus de notre class
+.tooltip
+  background-color: rgb(140, 14, 66) !important // Ajustez l'alpha (0.8) pour la transparence
+  color: #eee8e8 !important
+  font-size: 20px !important
+  font-weight: 30 !important
+  padding: 8px !important
+  border-radius: 20px !important
+  text-align: center !important
+
+
