--- a/src/connection/signIn/styles/LoginIndex.sass
+++ b/src/connection/signIn/styles/LoginIndex.sass
@@ -5,6 +5,6 @@
   align-items: center
   justify-content: center
   height: 100vh
-  background-image: url('../assets/simsonpng.png')
+  background-image: url('../../../AAAcomponents/assets/simsonpng.png')
   background-size: cover
   background-position: center
