--- a/src/pages/UserPreferences/_UserPreferences.sass
+++ b/src/pages/UserPreferences/_UserPreferences.sass
@@ -22,6 +22,9 @@
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1)
   transition: background-color 0.3s, color 0.3s
 
+  &.selected
+    background-color: red
+    color: white
 
 .providerButton
   padding: 10px 20px
