--- a/src/pages/login/_Login.sass
+++ b/src/pages/login/_Login.sass
@@ -1,10 +1,26 @@
-
 .loginContainer
+  width: 100%
   position: relative
   display: flex
+  flex-direction: column
   align-items: center
   justify-content: center
-  height: 100vh
+  height: 100%
+  overflow: hidden
   background-image: url('../../common/assets/simsonpng.png')
   background-size: cover
   background-position: center
+  &::before
+    width: 100%
+    height: 100%
+    content: ''
+    position: absolute
+    top: 0
+    left: 0
+    right: 0
+    bottom: 0
+    background-image: url('../../common/assets/simsonpng.png')
+    background-size: cover
+    background-position: center
+    filter: blur(6px)
+    z-index: 1
