--- a/src/pages/login/style/LoginForm.sass
+++ b/src/pages/login/style/LoginForm.sass
@@ -1,55 +1,38 @@
+.loginFromContainer
+   height: 100%
+   width: 100%
+   display: flex
+   flex-direction: column
+   justify-content: center
+   align-items: center
+
 .login-box
   position: relative
-  max-width: 400px
-  width: 100%
+  display: flex
+  align-items: center
+  flex-direction: column
+  width: 80%
+  height: 40%
   padding: 10px
-  background: rgba(255, 255, 255, 0.2) // Couleur blanche avec opacité
-  backdrop-filter: blur(6px) // Effet de flou
+  background: rgba(145, 33, 202, 0.28)
+  z-index: 2
   border-radius: 15px
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1)
+
   color: #fff
   text-align: center
-
-  h2
-    font-size: 1.8em
-    font-weight: bold
-    margin-bottom: 20px
-
-  form
-    display: flex
-    flex-direction: column
-    gap: 15px
-
-  input
-    padding: 10px
-    border: none
-    border-radius: 5px
-    color: #333
-    font-size: 1em
-
-    &::placeholder
-      color: #555
-
-  button
-    padding: 10px
-    border: none
-    border-radius: 5px
-    background: #007bff
-    color: #fff
-    font-size: 1em
-    cursor: pointer
-    transition: background 0.3s
-
-    &:hover
-      background: #0056b3
-
-  p
-    font-size: 0.9em
-    margin-top: 15px
-
-  a
-    color: #00aaff
-    text-decoration: none
-
-    &:hover
-      text-decoration: underline
+.loginForm
+  height: 100%
+  width: 100%
+  display: flex
+  align-items: center
+  justify-content: center
+  flex-direction: column
+.inputContainer
+  margin-top: 20px
+  margin-bottom: 20px
+.inputPasswordContainer
+  margin-top: 20px
+  margin-bottom: 20px
+.submitBtn
+  background:  linear-gradient(135deg, #7a0998, #ff6ec7, #e20dd2, #8a2be2,) !important
+  color: #ffffff !important
