--- a/src/pages/signUp/style/GoToSignIn.sass
+++ b/src/pages/signUp/style/GoToSignIn.sass
@@ -1,14 +1,13 @@
 .signInContainer
-    padding-bottom: 60px
-    padding-top: 40px
     display: flex
+    height: 30vh
+    width: 100vw
     justify-content: center
-
     a
         color: #ffffff
         font-weight: 400
         font-size: 20px
-        margin-left: 10px
+
         text-decoration: underline
         text-decoration-color: #ffffff
         text-decoration-thickness: 1px
