--- a/src/pages/signUp/style/SignUpForm.sass
+++ b/src/pages/signUp/style/SignUpForm.sass
@@ -5,6 +5,7 @@
     justify-content: space-between
     width: 50%
     height: 100%
+
 .submitBtn
    background: #ffffff
    width: 60vw
@@ -18,3 +19,4 @@
    outline: none
    color: #1d113d
    margin-top: 10px
+   margin-bottom: 10px
