--- a/src/pages/login/style/GoToSignUp.css
+++ b/src/pages/login/style/GoToSignUp.css
@@ -1,22 +1,19 @@
 .signUpContainer {
-  padding-bottom: 60px;
-  padding-top: 40px;
+  width: 70vw;
+  position: relative;
+  z-index: 3;
+  color: white;
+  height: 10vh;
   display: flex;
+  font-size: 20px;
+  text-align: center;
   justify-content: center;
+  align-items: center;
 }
 .signUpContainer a {
-  color: #ffffff;
-  font-weight: 400;
-  font-size: 20px;
-  margin-left: 10px;
-  text-decoration: underline;
-  text-decoration-color: #ffffff;
-  text-decoration-thickness: 1px;
-}
-.signUpContainer p {
-  color: #ffffff;
-  font-weight: 400;
-  font-size: 20px;
+  color: white;
+  text-align: center;
+  padding-left: 10px;
 }
 
 /*# sourceMappingURL=GoToSignUp.css.map */
