--- a/src/pages/login/style/LoginForm.sass
+++ b/src/pages/login/style/LoginForm.sass
@@ -1,38 +1,54 @@
 .loginFromContainer
-   height: 100%
-   width: 100%
-   display: flex
-   flex-direction: column
-   justify-content: center
-   align-items: center
+  height: 100%
+  width: 100%
+  display: flex
+  flex-direction: column
+  justify-content: center
+  align-items: center
 
 .login-box
+  margin-top: 70px
   position: relative
   display: flex
   align-items: center
   flex-direction: column
   width: 80%
-  height: 40%
-  padding: 10px
-  background: rgba(145, 33, 202, 0.28)
+  height: 60%
+  padding: 20px
+  background: rgba(252, 192, 255, 0.3)
   z-index: 2
-  border-radius: 15px
+  border-radius: 30px
 
   color: #fff
   text-align: center
+
 .loginForm
-  height: 100%
+  height: 80%
   width: 100%
   display: flex
   align-items: center
   justify-content: center
   flex-direction: column
+
+
 .inputContainer
-  margin-top: 20px
-  margin-bottom: 20px
+  margin-top: 30px
+  margin-bottom: 30px
+
 .inputPasswordContainer
-  margin-top: 20px
-  margin-bottom: 20px
-.submitBtn
-  background:  linear-gradient(135deg, #7a0998, #ff6ec7, #e20dd2, #8a2be2,) !important
-  color: #ffffff !important
+  margin-top: 30px
+  margin-bottom: 30px
+
+.submitBtnSignIn
+  background: linear-gradient(135deg,rgba(122, 9, 152, 1),rgba(216, 92, 168, 0.8),rgba(226, 13, 210, 1),rgba(138, 43, 226, 0.7))
+  width: 60vw
+  height: 7vh
+  border-radius: 40px
+  text-align: center
+  font-family: 'Open Sans', sans-serif
+  font-weight: 600
+  font-size: 3vh
+  border: none
+  outline: none
+  color: #ffffff
+  margin-top: 30px
