Principalement du css et refacto jcrois rien d'autre

--- a/src/common/style/FormInput.sass
+++ b/src/common/style/FormInput.sass
@@ -22,11 +22,13 @@
   color: transparent
   outline: none
   margin-top: 2px
-  font-size: 20px
   font-family: 'Roboto', sans-serif
-  font-weight: 100
+
   margin-left: 10px
   caret-color: #ffffff
+  font-size: 2rem // Taille relative à la racine
+  font-weight: 500
+
 
 // sans le important jcrois que la bibliothèque passe au dessus de notre class
 .tooltip
