--- a/src/common/style/PasswordInput.sass
+++ b/src/common/style/PasswordInput.sass
@@ -35,13 +35,12 @@
   background-clip: text
   color: transparent
   padding-left: 10px
-
   outline: none
   margin-top: 2px
-  font-size: 20px
   font-family: 'Roboto', sans-serif
-  font-weight: 100
   caret-color: #ffffff
+  font-size: 2rem
+  font-weight: 500
 
 .error
   -webkit-background-clip: text
