--- a/src/common/style/PasswordInput.css
+++ b/src/common/style/PasswordInput.css
@@ -37,10 +37,10 @@
   padding-left: 10px;
   outline: none;
   margin-top: 2px;
-  font-size: 20px;
   font-family: "Roboto", sans-serif;
-  font-weight: 100;
   caret-color: #ffffff;
+  font-size: 2rem;
+  font-weight: 500;
 }
 
 .error {
