--- a/src/pages/UserPreferences/_UserPreferences.sass
+++ b/src/pages/UserPreferences/_UserPreferences.sass
@@ -1,3 +1,9 @@
+.UserPreferencesGlobal
+  background:  linear-gradient(to right, #7b2c2c, #9d2436, #770505), linear-gradient(to bottom, #521e66, #815353, #a533a9)
+  background-blend-mode: multiply
+  width: 100vw
+  height: 100vh
+
 .genreContainer
   display: flex
   flex-wrap: wrap
@@ -40,3 +46,4 @@
   &.selected
     background-color: red
     color: white
+
