--- a/src/App.sass
+++ b/src/App.sass
@@ -3,9 +3,9 @@
   margin: 0
 
 body
-  height: 100%
-  width: 100%
-  box-sizing: border-box
+  height: 100vh
+  width: 100vw
+
 
 #root
   height: 100%
