--- a/src/pages/mainPage/_MainPageStyle.sass
+++ b/src/pages/mainPage/_MainPageStyle.sass
@@ -1,8 +1,8 @@
 
 .mainPage
-  width: 100%
-  height: 100%
+  width: 100vw
+  height: 100vh
   display: flex
-  justify-content: center
-  align-items: center
   flex-direction: column
+  background:  linear-gradient(to right, #1b0202, #4d0404, #370202)
+
