--- a/src/pages/mainPage/style/MiddleMainPage.css
+++ b/src/pages/mainPage/style/MiddleMainPage.css
@@ -1,38 +1,82 @@
 .middleMainPage {
-  width: 90%;
-  height: 70%;
+  height: 78%;
+  width: 100%;
+  overflow: scroll;
+  scroll-behavior: smooth;
+}
+.middleMainPage .imageContainer {
+  height: 100%;
+  width: 100%;
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
-}
-.middleMainPage .imageContainer {
-  position: relative;
-  display: inline-block;
+  flex-direction: column;
 }
 .middleMainPage .imageContainer img {
-  width: 100%;
-  height: auto;
+  width: 90%;
+  height: 90%;
   object-fit: contain;
 }
-.middleMainPage .imageContainer svg {
+.middleMainPage .imageContainer .svgLike {
+  height: 60px;
+  width: 60px;
   position: absolute;
-  color: white;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
-.middleMainPage .imageContainer svg {
+  bottom: 10%;
+  right: 10%;
   padding: 10px;
-  background: rgb(255, 255, 255);
   border-radius: 50%;
-  bottom: 30px;
-  right: 30px;
-  align-items: center;
-  align-content: center;
+  background-color: #ffffff;
 }
-.middleMainPage .imageContainer .button2 {
-  bottom: 10px;
-  right: 10px;
+.middleMainPage .imageContainer .svgDislike {
+  height: 60px;
+  width: 60px;
+  position: absolute;
+  bottom: 10%;
+  left: 10%;
+  padding: 10px;
+  border-radius: 50%;
+  background-color: #ffffff;
+}
+.middleMainPage .detailContainer {
+  margin-top: 2px;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+  border: none;
+  color: #f8d8d8;
+  margin-left: 30px;
+  margin-right: 30px;
+}
+.middleMainPage .detailContainer .title_duration_container {
+  display: flex;
+  text-align: center;
+}
+.middleMainPage .detailContainer .title_duration_container .title {
+  font-size: 1.3em;
+  font-weight: bold;
+}
+.middleMainPage .detailContainer .title_duration_container .duration {
+  padding-left: 10px;
+  font-size: 1.3em;
+  font-weight: bold;
+}
+.middleMainPage .detailContainer .title_duration_container .releaseDate {
+  padding-left: 10px;
+  font-size: 1.3em;
+  font-weight: bold;
+}
+.middleMainPage .detailContainer .grade_votes_container {
+  padding-top: 10px;
+  display: flex;
+  text-align: center;
+}
+.middleMainPage .detailContainer .grade_votes_container .averageGrade {
+  padding-left: 10px;
+}
+.middleMainPage .detailContainer .synopsisContainer {
+  padding-top: 10px;
+  display: flex;
 }
 
 /*# sourceMappingURL=MiddleMainPage.css.map */
