--- a/src/pages/mainPage/style/MiddleMainPage.sass
+++ b/src/pages/mainPage/style/MiddleMainPage.sass
@@ -16,11 +16,25 @@
     flex-direction: column
 
 
-    img
+    .draggableContainer
+      display: flex
+      justify-content: center
+      align-items: center
+      width: 100%
+      height: 100%
+
+    .cardContainer
+      position: absolute
+      display: flex
+      justify-content: center
+      align-items: center
+      width: 100%
+      height: 100%
+
+    .card
+
       width: 90%
       height: 90%
-      object-fit: contain
-
     .svgLike
       height: 60px
       width: 60px
