Ajout de la gestion des groupes dans mainPage et ajoute du code du groupes directement sur la page

--- a/src/pages/mainPage/style/groupManagement.sass
+++ b/src/pages/mainPage/style/groupManagement.sass
@@ -68,6 +68,7 @@ $box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1)
   display: flex
   justify-content: center
   align-items: center
+  z-index: 1000
 
 .popup-content
   background: white
