--- a/src/pages/groupLike/_GroupKike.sass
+++ b/src/pages/groupLike/_GroupKike.sass
@@ -1,48 +1,43 @@
 .groupLikePage
-  padding: 20px
-
-  h1, h2
-    margin-bottom: 10px
-
-  .sectionItem
-    margin-bottom: 20px
-
-    h2
-      display: flex
-      align-items: center
-      gap: 5px
+  background:  linear-gradient(to right, #1b0202, #4d0404, #370202)
+  text-align: center
+  align-items: center
+  justify-content: center
+  height: 100vh
+  width: 100vw
+  overflow: scroll
 
   ul
     display: flex
-    gap: 10px
+    justify-content: center
     flex-wrap: wrap
 
   .movieItem
     list-style: none
 
-    img
-      width: 100px
-      height: 150px
-      border-radius: 8px
-      object-fit: cover
+    .cardContainer
+     display: flex
+     align-items: center
 
+    .card
+        height: 150px
+        width: 100px
+        margin: 6px
+        border-radius: 10px
 
 .popupOverlay
+  border-radius: 20px
+  overflow: scroll
   position: fixed
-  top: 0
-  left: 0
-  width: 50%
-  height: 50%
-  background: rgba(0, 0, 0, 0.7)
+  top: 20%
+  left: 10%
+  width: 80%
+  height: 60%
+  background: rgba(14, 0, 0, 0.8)
   display: flex
   justify-content: center
   align-items: center
-  z-index: 1000
 
 .popupContent
-  background: white
-  padding: 20px
-  border-radius: 10px
-  max-width: 600px
-  width: 50%
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2)
+  height: 100%
+  width: 100%
