--- a/src/pages/mainPage/style/MovieDisplay.css
+++ b/src/pages/mainPage/style/MovieDisplay.css
@@ -32,9 +32,9 @@
   position: absolute;
   bottom: 10%;
   right: 10%;
-  padding: 10px;
+  padding: 6px;
   border-radius: 50%;
-  background-color: #ffffff;
+  background-color: rgba(255, 255, 255, 0.37);
 }
 .imageContainer .svgDislike {
   height: 60px;
@@ -42,9 +42,9 @@
   position: absolute;
   bottom: 10%;
   left: 10%;
-  padding: 10px;
+  padding: 6px;
   border-radius: 50%;
-  background-color: #ffffff;
+  background-color: rgba(255, 255, 255, 0.37);
 }
 .imageContainer .detailContainer {
   margin-top: 2px;
