--- a/src/pages/mainPage/style/MovieDisplay.sass
+++ b/src/pages/mainPage/style/MovieDisplay.sass
@@ -33,9 +33,9 @@
     position: absolute
     bottom: 10%
     right: 10%
-    padding: 10px
+    padding: 6px
     border-radius: 50%
-    background-color: #ffffff
+    background-color: rgba(255, 255, 255, 0.37)
 
   .svgDislike
     height: 60px
@@ -43,9 +43,9 @@
     position: absolute
     bottom: 10%
     left: 10%
-    padding: 10px
+    padding: 6px
     border-radius: 50%
-    background-color: #ffffff
+    background-color: rgba(255, 255, 255, 0.37)
 
   .detailContainer
     margin-top: 2px
