--- a/src/pages/groupLike/_GroupKike.sass
+++ b/src/pages/groupLike/_GroupKike.sass
@@ -7,11 +7,18 @@
   width: 100vw
   overflow: scroll
 
-  ul
+
+  .movieContainer
     display: flex
-    justify-content: center
     flex-wrap: wrap
 
+    justify-content: center
+    align-items: center
+
+  .ul-container
+    display: flex
+    flex-direction: column
+    justify-content: left
   .movieItem
     list-style: none
 
