--- a/src/pages/mainPage/style/HeaderMainPage.sass
+++ b/src/pages/mainPage/style/HeaderMainPage.sass
@@ -1,5 +1,4 @@
 .headerPrefer
-
   height: 16%
   width: 100%
   display: flex
@@ -8,6 +7,20 @@
   .svgFilmder
     padding-left: 20px
   .svgLogout
+    height: 40px
+    width: 40px
+    padding-right: 20px
+    color: white
+  .action-buttons
+
+    gap: 0
+    margin-bottom: 0
+  .SvgGroupAdd
+    height: 40px
+    width: 40px
+    padding-right: 20px
+    color: white
+  .SvgGroupJoin
     height: 40px
     width: 40px
     padding-right: 20px
