--- a/src/pages/mainPage/style/MovieDisplay.sass
+++ b/src/pages/mainPage/style/MovieDisplay.sass
@@ -8,6 +8,7 @@
   flex-direction: column
 
 
+
   .draggableContainer
     display: flex
     justify-content: center
@@ -23,10 +24,10 @@
     width: 100%
     height: 100%
 
-  .card
-
+  .card 
     width: 90%
     height: 90%
+    object-fit: contain
   .svgLike
     height: 60px
     width: 60px
