--- a/src/pages/mainPage/style/groupManagement.sass
+++ b/src/pages/mainPage/style/groupManagement.sass
@@ -1,8 +1,11 @@
-// Variables pour personnalisation
+
 $primary-color: #f0f0f0
 $secondary-color: #ccc
 $border-radius: 5px
 $box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1)
+svg
+  height: 40px
+  width: 40px
 
 // Style principal
 .group-page
