--- a/src/pages/mainPage/_MainPageStyle.sass
+++ b/src/pages/mainPage/_MainPageStyle.sass
@@ -4,5 +4,5 @@
   height: 100vh
   display: flex
   flex-direction: column
-  background:  linear-gradient(to right, #1b0202, #4d0404, #370202)
+  background:  linear-gradient(45deg, #1d0102, #060232, #39030f)
 
