--- a/src/pages/mainPage/style/MovieDisplay.css
+++ b/src/pages/mainPage/style/MovieDisplay.css
@@ -14,6 +14,9 @@
   width: 100%;
   height: 100%;
 }
+.imageContainer .opacity {
+  opacity: 0.4;
+}
 .imageContainer .cardContainer {
   position: absolute;
   display: flex;
@@ -33,9 +36,8 @@
   position: absolute;
   bottom: 10%;
   right: 10%;
-  padding: 6px;
   border-radius: 50%;
-  background-color: rgba(255, 255, 255, 0.37);
+  opacity: 0.7;
 }
 .imageContainer .svgDislike {
   height: 60px;
@@ -43,9 +45,18 @@
   position: absolute;
   bottom: 10%;
   left: 10%;
-  padding: 6px;
   border-radius: 50%;
-  background-color: rgba(255, 255, 255, 0.37);
+  opacity: 0.7;
+}
+.imageContainer .svgEye {
+  height: 40px;
+  width: 40px;
+  position: absolute;
+  bottom: calc(10% + 10px);
+  padding: 2px;
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.27);
+  left: calc(50% - 20px);
 }
 .imageContainer .detailContainer {
   margin-top: 2px;
@@ -92,6 +103,16 @@
   color: white;
   padding-top: 10px;
   display: flex;
+}
+
+.videoContainer {
+  position: absolute;
+  width: 90%;
+  height: 36%;
+}
+.videoContainer .video {
+  height: 100%;
+  width: 100%;
 }
 
 /*# sourceMappingURL=MovieDisplay.css.map */
