--- a/src/pages/mainPage/style/MovieDisplay.sass
+++ b/src/pages/mainPage/style/MovieDisplay.sass
@@ -9,12 +9,15 @@
 
 
 
+
   .draggableContainer
     display: flex
     justify-content: center
     align-items: center
     width: 100%
     height: 100%
+  .opacity
+    opacity: 0.4
 
   .cardContainer
     position: absolute
@@ -24,7 +27,7 @@
     width: 100%
     height: 100%
 
-  .card 
+  .card
     width: 90%
     height: 90%
     object-fit: contain
@@ -34,9 +37,8 @@
     position: absolute
     bottom: 10%
     right: 10%
-    padding: 6px
     border-radius: 50%
-    background-color: rgba(255, 255, 255, 0.37)
+    opacity: 0.7
 
   .svgDislike
     height: 60px
@@ -44,9 +46,19 @@
     position: absolute
     bottom: 10%
     left: 10%
-    padding: 6px
     border-radius: 50%
-    background-color: rgba(255, 255, 255, 0.37)
+    opacity: 0.7
+  .svgEye
+    height: 40px
+    width: 40px
+    position: absolute
+    bottom: calc(10% + 10px)
+    padding: 2px
+    border-radius: 50%
+    background-color: rgba(255, 255, 255, 0.27)
+    left: calc(50% - 20px)
+
+
 
   .detailContainer
     margin-top: 2px
@@ -92,3 +104,11 @@
       color: white
       padding-top: 10px
       display: flex
+.videoContainer
+  position: absolute
+  width: 90%
+  height: 36%
+
+  .video
+    height: 100%
+    width: 100%
