add bande annonce

--- a/src/pages/groupLike/_GroupKike.sass
+++ b/src/pages/groupLike/_GroupKike.sass
@@ -1,5 +1,5 @@
 .groupLikePage
-  background:  linear-gradient(to right, #1b0202, #4d0404, #370202)
+  background:  linear-gradient(45deg, #1d0102, #060232, #39030f)
   text-align: center
   align-items: center
   justify-content: center
