--- a/src/pages/login/style/HeaderLogin.css
+++ b/src/pages/login/style/HeaderLogin.css
@@ -9,4 +9,9 @@
   margin-top: 50px;
 }
 
+.svgFilmder {
+  width: 300px !important;
+  height: 50px !important;
+}
+
 /*# sourceMappingURL=HeaderLogin.css.map */
