--- a/src/pages/login/style/LoginForm.sass
+++ b/src/pages/login/style/LoginForm.sass
@@ -15,7 +15,7 @@
   width: 80%
   height: 60%
   padding: 20px
-  background: rgba(252, 192, 255, 0.3)
+  background: rgba(255, 255, 255, 0.07)
   z-index: 2
   border-radius: 30px
 
@@ -38,7 +38,7 @@
   margin-bottom: 30px
 
 .submitBtnSignIn
-  background: linear-gradient(135deg,rgba(122, 9, 152, 1),rgba(216, 92, 168, 0.8),rgba(226, 13, 210, 1),rgba(138, 43, 226, 0.7))
+  background:  linear-gradient(45deg, #1d0102, #060232, #39030f)
   width: 60vw
   height: 7vh
   border-radius: 40px
