--- a/src/pages/preferences/_PreferencesPage.sass
+++ b/src/pages/preferences/_PreferencesPage.sass
@@ -1,10 +1,10 @@
-.UserPreferencesGlobal
-  background:  linear-gradient(to right, #7b2c2c, #9d2436, #770505), linear-gradient(to bottom, #521e66, #815353, #a533a9)
-  background-blend-mode: multiply
+.PreferencesGlobal
+  background:  linear-gradient(45deg, #1d0102, #060232, #39030f)
   width: 100vw
   height: 100vh
 
 .genreContainer
+
   display: flex
   flex-wrap: wrap
   gap: 10px
@@ -46,4 +46,5 @@
   &.selected
     background-color: red
     color: white
-
+h1
+  color: white
