--- a/src/pages/signUp/_SignUp.sass
+++ b/src/pages/signUp/_SignUp.sass
@@ -1,8 +1,7 @@
 .signUpGlobalStyle
-    background:  linear-gradient(to right, #7b2c2c, #9d2436, #770505), linear-gradient(to bottom, #521e66, #815353, #a533a9)
-    background-blend-mode: multiply
-    height: 100%
-    width: 100%
+    height: 100vh
+    width: 100vw
+    background:  linear-gradient(45deg, #1d0102, #060232, #39030f)
     display: flex
     flex-direction: column
     justify-content: space-between
