--- a/src/pages/groupLike/styles/UserList.sass
+++ b/src/pages/groupLike/styles/UserList.sass
@@ -7,7 +7,7 @@
   width: 50px
   height: 50px
   border-radius: 50%
-  color: #fff
+  color: #000000
   display: flex
   align-items: center
   justify-content: center
@@ -16,7 +16,10 @@
   transition: background-color 0.3s
 
   &.selected
-    background-color: green
+    background-color: #ffffff
+    opacity: 0.9
+
 
   &.notSelected
-    background-color: red
+    background-color: #ffffff
+    opacity: 0.2
