--- a/src/pages/login/_Login.sass
+++ b/src/pages/login/_Login.sass
@@ -6,20 +6,7 @@
   width: 100vw
   height: 100vh // Occupe tout l'écran
   overflow: hidden
-
-  &::before
-    content: ''
-    position: absolute
-    top: 0
-    left: 0
-    width: 100%
-    height: 100%
-    background-image: url('../../common/assets/simsonpng.png')
-    background-size: cover
-    background-position: center
-    filter: blur(4px)
-    z-index: 1
-    pointer-events: none
+  background:  linear-gradient(45deg, #1d0102, #060232, #39030f)
 
   .content
     position: relative
