--- a/src/pages/login/style/LoginForm.css
+++ b/src/pages/login/style/LoginForm.css
@@ -16,7 +16,7 @@
   width: 80%;
   height: 60%;
   padding: 20px;
-  background: rgba(252, 192, 255, 0.3);
+  background: rgba(255, 255, 255, 0.07);
   z-index: 2;
   border-radius: 30px;
   color: #fff;
@@ -41,7 +41,7 @@
 }
 
 .submitBtnSignIn {
-  background: linear-gradient(135deg, rgb(122, 9, 152), rgba(216, 92, 168, 0.8), rgb(226, 13, 210), rgba(138, 43, 226, 0.7));
+  background: linear-gradient(45deg, #1d0102, #060232, #39030f);
   width: 60vw;
   height: 7vh;
   border-radius: 40px;
