--- a/src/pages/mainPage/style/FooterMainPage.sass
+++ b/src/pages/mainPage/style/FooterMainPage.sass
@@ -1,121 +1,98 @@
-// Variables Sass
-$border-color: #ccc
-$border-radius: 8px
-$padding: 10px
-$background-color: #b26464
-$active-background-color: #e0f7fa
-$text-color: #ffffff
-$hover-color: #007bff
+$primary-color: rgba(255, 255, 255, 0)
+$text-color: rgba(255, 255, 255, 0.91)
+svg
+    height: 27px
+    width: 27px
+    margin-right: 10px
+    stroke: $text-color
 
-// Footer principal
+
 .footerPrefer
+  height: 15%
   width: 100%
-  height: 20%
+  display: flex
+  align-items: center
   flex-shrink: 0
-
-.navFooter
-    display: flex
-    justify-content: space-between
-    align-items: center
-    padding: 10px
-    color: white
-    font-size: 1.2rem
-    font-weight: bold
-
-
-
-// Combo Box personnalisé
-.customComboBox
-  border: none
-  margin-top: 10px
-  margin-left: 10px
-  position: relative
-  width: 60%
-  color: rgba(255, 255, 255, 0.76)
-
-
-  // Groupe sélectionné
-  .selectedGroup
-    .action-buttons
-      background-color: white
-      align-items: center
-      justify-content: center
-      text-align: center
-
-
-    .groupList
-
-    border-top-left-radius: $border-radius
-    border-top-right-radius: $border-radius
-    padding: $padding
-    background :  linear-gradient(-45deg, #1d0102, #060232, #39030f)
-    cursor: pointer
-    display: flex
-    justify-content: space-between
-    align-items: center
-
-    .groupName
-        color: $text-color
-
-    .iconsContainer
-      display: flex
-      align-items: center
-      gap: 5px
-      color: white
-
-    .dropdownIcon
-
-
-  // Liste des groupes
-  .groupList
-    list-style: none
-    padding: 0
-
-    border-bottom-left-radius: $border-radius
-    border-bottom-right-radius: $border-radius
-    background-color: $background-color
-    position: absolute
+  .navFooter
+    height: 100%
     width: 100%
-    top: 100%
-    // Positionné juste sous l'élément sélectionné
-    left: 0
-    z-index: 10
-
-    border: none
-    max-height: 200%
-    overflow: scroll
-
-    .groupItem
+    display: flex
+    justify-content: space-around
+    align-items: center
+    .group-page
+      padding: 0
+      margin: 0
+      width: 40%
+      height: 90%
       display: flex
-      justify-content: space-between
-      align-items: center
-      padding: $padding
-      cursor: pointer
-      background: linear-gradient(45deg, #1d0102, #060232, #39030f)
-      border: #1b0202 1px solid
-      border-top: none
-      box-shadow: rgba(27, 2, 2, 0.39) 0px 0px 5px
+      justify-content: center
+    .customComboBox
+      margin-left: 20px
+      width: 60%
+      height: 90%
 
-      &:last-child
-        border-bottom: none
-      // Supprime la bordure pour le dernier élément
+      .selectedGroup
+        box-shadow: rgba(244,244,244,0.18) -2px -2px 20px 1px inset
+        border-top-right-radius: 5px
+        border-top-left-radius: 5px
+        position: relative
+        height: 33%
+        background-color: $primary-color
+        display: flex
+        justify-content: right
+        align-items: center
+        span
+          color: $text-color
+          position: absolute
+          left: 0
+          padding-left: 10px
 
-      &:hover
-        background-color: lighten($background-color, 10%)
+        .dropdownIcon
 
-      &.active
-        background-color: $active-background-color
-        font-weight: bold
+          position: relative
+          padding-right: 6px
+        .iconsContainer
+            color: white
+            height: 100%
+            display: flex
+            justify-content: center
+            align-items: center
+      .groupList
+
+        border-bottom-right-radius: 5px
+        border-bottom-left-radius: 5px
+        border: none
+
+        height: 66%
+        overflow: scroll
+        .groupItem
+            box-shadow: rgba(244,244,244,0.18) -2px -2px 20px 1px inset
+            height: 50%
+            background-color: $primary-color
+            display: flex
+            padding-right: 31.84px
+            justify-content: space-between
+            align-items: center
+            text-align: center
+
+            .groupName
+                padding-left: 10px
+                color: $text-color
+                height: 100%
+                display: flex
+                text-align: center
+                justify-content: center
+                align-items: center
+            .iconsContainer
+              color: white
+              display: flex
+              text-align: center
+              justify-content: center
+              align-items: center
 
 
-.groupSettingsIcon
-  cursor: pointer
-  color: $text-color
-  height: 20px
-  width: 20px
 
-  // Taille ajustée pour réduire la hauteur
 
-  &:hover
-    color: $hover-color
+
+
 
