--- a/src/pages/mainPage/style/MovieDisplay.css
+++ b/src/pages/mainPage/style/MovieDisplay.css
@@ -58,49 +58,47 @@
   background-color: rgba(255, 255, 255, 0.27);
   left: calc(50% - 20px);
 }
-.imageContainer .detailContainer {
-  margin-top: 2px;
+
+.detailContainer {
   display: flex;
   flex-direction: column;
   overflow: hidden;
   border: none;
-  color: #f8d8d8;
+  color: #e4e4e4;
   margin-left: 30px;
   margin-right: 30px;
 }
-
-.title_duration_container {
-  color: white;
+.detailContainer .title_duration_container {
+  color: #e4e4e4;
   display: flex;
   text-align: center;
 }
-.title_duration_container .title {
+.detailContainer .title_duration_container .title {
   font-size: 1.3em;
   font-weight: bold;
 }
-.title_duration_container .duration {
+.detailContainer .title_duration_container .duration {
   padding-left: 10px;
   font-size: 1.3em;
   font-weight: bold;
 }
-.title_duration_container .releaseDate {
+.detailContainer .title_duration_container .releaseDate {
   padding-left: 10px;
   font-size: 1.3em;
   font-weight: bold;
 }
-
-.grade_votes_container {
-  color: white;
+.detailContainer .grade_votes_container {
+  color: #e4e4e4;
   padding-top: 10px;
   display: flex;
   text-align: center;
 }
-.grade_votes_container .averageGrade {
-  color: white;
+.detailContainer .grade_votes_container .averageGrade {
+  color: #e4e4e4;
   padding-left: 10px;
 }
-.synopsisContainer {
-  color: white;
+.detailContainer .synopsisContainer {
+  color: #e4e4e4;
   padding-top: 10px;
   display: flex;
 }
