--- a/src/pages/mainPage/style/MovieDisplay.sass
+++ b/src/pages/mainPage/style/MovieDisplay.sass
@@ -1,3 +1,4 @@
+$text-color: #e4e4e4
 .imageContainer
   height: 100%
   width: 100%
@@ -60,19 +61,18 @@
 
 
 
-  .detailContainer
-    margin-top: 2px
+.detailContainer
     display: flex
     flex-direction: column
     overflow: hidden
     border: none
-    color : #f8d8d8
+    color : $text-color
     margin-left: 30px
     margin-right: 30px
 
 
-.title_duration_container
-      color: white
+    .title_duration_container
+      color: $text-color
       display: flex
       text-align: center
 
@@ -89,19 +89,19 @@
         padding-left: 10px
         font-size: 1.3em
         font-weight: bold
-.grade_votes_container
-      color: white
+    .grade_votes_container
+      color: $text-color
       padding-top: 10px
       display: flex
       text-align: center
 
       .averageGrade
-        color: white
+        color: $text-color
         padding-left: 10px
 
       .votes
-.synopsisContainer
-      color: white
+    .synopsisContainer
+      color: $text-color
       padding-top: 10px
       display: flex
 .videoContainer
