Login Finito ajoute de toast J'ai retirer un svg 40px car trop gros pour pti telephone

--- a/src/pages/login/style/LoginForm.sass
+++ b/src/pages/login/style/LoginForm.sass
@@ -38,7 +38,7 @@
   margin-bottom: 30px
 
 .submitBtnSignIn
-  background:  linear-gradient(45deg, #1d0102, #060232, #39030f)
+  background: linear-gradient(45deg, #1d0102, #060232, #39030f)
   width: 60vw
   height: 7vh
   border-radius: 40px
@@ -50,3 +50,25 @@
   outline: none
   color: #ffffff
   margin-top: 30px
+  transition: background-color 0.3s ease
+  &:disabled
+    background: grey
+    cursor: not-allowed
+
+.spinnerLogin
+  position: absolute
+  top: 56%
+  left: 70%
+  margin-left: 8px
+  border: 2px solid #eee
+  border-top: 2px solid #333
+  border-radius: 50%
+  width: 24px
+  height: 24px
+  animation: spinLogin 1s linear infinite
+
+@keyframes spinLogin
+  0%
+    transform: rotate(0deg)
+  100%
+    transform: rotate(360deg)
