--- a/src/pages/mainPage/style/MiddleMainPage.sass
+++ b/src/pages/mainPage/style/MiddleMainPage.sass
@@ -1,8 +1,4 @@
-
-
-
-
-.spinner
+.spinnerMainPage
   position: absolute
   top: 47%
   left: 42%
@@ -12,6 +8,7 @@
   width: 60px
   height: 60px
   animation: spin 1s linear infinite
+
 @keyframes spin
   0%
     transform: rotate(0deg)
