--- a/src/common/style/FormInput.sass
+++ b/src/common/style/FormInput.sass
@@ -9,7 +9,8 @@
   border: 2px solid #f1eded
   padding-right: 30px
   font-weight: bold
-
+.inputContainer.error
+  border-color: red
 
 .input
   width: 100%
@@ -23,6 +24,9 @@
   outline: none
   margin-top: 2px
   font-family: 'Roboto', sans-serif
+
+
+
 
   margin-left: 10px
   caret-color: #ffffff
