Le decalage quand mauvaise input regler

--- a/src/common/style/FormInput.sass
+++ b/src/common/style/FormInput.sass
@@ -9,8 +9,8 @@
   border: 2px solid #f1eded
   padding-right: 30px
   font-weight: bold
-.inputContainer.error
-  border-color: red
+.inputContainer.wrongInput
+  border: 2px solid red
 
 .input
   width: 100%
@@ -36,11 +36,12 @@
 
 // sans le important jcrois que la bibliothèque passe au dessus de notre class
 .tooltip
-  background-color: rgb(140, 14, 66) !important // Ajustez l'alpha (0.8) pour la transparence
-  color: #eee8e8 !important
-  font-size: 20px !important
-  font-weight: 30 !important
-  padding: 8px !important
-  border-radius: 20px !important
-  text-align: center !important
+  background-color: rgb(140, 14, 66)  // Ajustez l'alpha (0.8) pour la transparence
+  color: #eee8e8
+  font-size: 20px
+  font-weight: 30
+  padding: 8px
+  border-radius: 20px
+  text-align: center
+  margin-left: 0px !important
 
