--- a/src/common/style/PasswordInput.css
+++ b/src/common/style/PasswordInput.css
@@ -1,28 +1,17 @@
 /* src/AAAcomponents/PasswordInput.sass */
 .inputPasswordContainer {
   display: flex;
-  background-clip: text;
   color: transparent;
   width: 70vw;
   height: 6vh;
-  justify-content: center;
   align-items: center;
   border-radius: 40px;
   border: 2px solid #f1eded;
-  padding-right: 30px;
   font-weight: bold;
 }
-.inputPasswordContainer .passwordToggleBtn {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  background-clip: text;
-  fill: white;
-  color: white;
-  border: none;
-  outline: none;
+
+.inputPasswordContainer.wrongInput {
+  border: 2px solid red;
 }
 
 .inputPassword {
@@ -30,17 +19,34 @@
   height: 100%;
   border: none;
   border-radius: 40px;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  background-clip: text;
-  color: transparent;
-  padding-left: 10px;
+  background-color: transparent;
+  color: white;
   outline: none;
   margin-top: 2px;
   font-family: "Roboto", sans-serif;
-  caret-color: #ffffff;
-  font-size: 2rem;
+  padding-right: 10px;
+  border-right: 2px solid transparent;
+  margin-left: 10px;
+  font-size: 1.5rem;
   font-weight: 500;
+}
+
+.inputPassword::placeholder {
+  color: rgba(255, 255, 255, 0.87);
+  opacity: 1;
+  font-size: 1.5rem;
+}
+
+.passwordToggleBtn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  fill: white;
+  color: white;
+  border: none;
+  outline: none;
 }
 
 .error {
