--- a/src/common/style/PasswordInput.sass
+++ b/src/common/style/PasswordInput.sass
@@ -2,45 +2,49 @@
 
 .inputPasswordContainer
   display: flex
-  background-clip: text
+
   color: transparent
   width: 70vw
   height: 6vh
-  justify-content: center
   align-items: center
   border-radius: 40px
   border: 2px solid #f1eded
-  padding-right: 30px
-  font-weight: bold
 
-  .passwordToggleBtn
-    display: flex
-    align-items: center
-    justify-content: center
-    -webkit-background-clip: text
-    -webkit-text-fill-color: transparent
-    background-clip: text
-    fill: white
-    color: white
-    border: none
-    outline: none
+  font-weight: bold
+.inputPasswordContainer.wrongInput
+  border: 2px solid red
 
 .inputPassword
   width: 100%
   height: 100%
   border: none
   border-radius: 40px
-  -webkit-background-clip: text
-  -webkit-text-fill-color: transparent
-  background-clip: text
-  color: transparent
-  padding-left: 10px
+  background-color: transparent
+  color: white
   outline: none
   margin-top: 2px
   font-family: 'Roboto', sans-serif
-  caret-color: #ffffff
-  font-size: 2rem
+  padding-right: 10px
+  border-right: 2px solid transparent
+  margin-left: 10px
+  font-size: 1.5rem
   font-weight: 500
+.inputPassword::placeholder
+  color: rgba(255, 255, 255, 0.87)
+  opacity: 1
+  font-size: 1.5rem
+
+.passwordToggleBtn
+    display: flex
+    align-items: center
+    justify-content: center
+    -webkit-background-clip: text
+    -webkit-text-fill-color: transparent
+    fill: white
+    color: white
+    border: none
+    outline: none
+
 
 .error
   -webkit-background-clip: text
@@ -53,9 +57,9 @@
   position: relative
   top: 10px
 
-// sans le important jcrois que la bibliothèque passe au dessus de notre class
+
 .tooltip
-  background-color: rgb(140, 14, 66) !important // Ajustez l'alpha (0.8) pour la transparence
+  background-color: rgb(140, 14, 66) !important
   color: #eee8e8 !important
   font-size: 20px !important
   font-weight: 30 !important
