--- a/src/common/style/FormInput.sass
+++ b/src/common/style/FormInput.sass
@@ -1,13 +1,11 @@
 .inputContainer
   display: flex
-  background-clip: text
   color: transparent
   width: 70vw
   height: 6vh
   align-items: center
   border-radius: 40px
   border: 2px solid #f1eded
-  padding-right: 30px
   font-weight: bold
 .inputContainer.wrongInput
   border: 2px solid red
@@ -16,25 +14,22 @@
   width: 100%
   height: 100%
   border: none
-  border-radius: 40px
-  -webkit-background-clip: text
-  -webkit-text-fill-color: transparent
-  background-clip: text
-  color: transparent
+  background-color: transparent
+  color: white
   outline: none
   margin-top: 2px
   font-family: 'Roboto', sans-serif
-
-
-
-
+  padding-right: 10px
+  border-right: 2px solid transparent
   margin-left: 10px
-  caret-color: #ffffff
-  font-size: 2rem // Taille relative à la racine
+  font-size: 1.5rem
   font-weight: 500
+.input::placeholder
+  color: rgba(255, 255, 255, 0.87)
+  opacity: 1
+  font-size: 1.5rem
 
 
-// sans le important jcrois que la bibliothèque passe au dessus de notre class
 .tooltip
   background-color: rgb(140, 14, 66)  // Ajustez l'alpha (0.8) pour la transparence
   color: #eee8e8
